src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Add_to_Payment_Plan__c</fullName>
        <formula>AND(Payment_Plan_Balance__c &gt; 0, Payment_Plan_Balance__c &lt;&gt; Invoiced_Balance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Payment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>MailingStreet + BR() + MailingCity + &quot;, &quot; + MailingState + &quot; &quot; + MailingPostalCode + &quot; &quot; + MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Contacts&apos;s age in years</description>
        <formula>IF(ISBLANK(Birthdate), NULL, YEAR(Today()) - YEAR(Birthdate) - IF(DATE(2000, MONTH(Birthdate), DAY(Birthdate)) &gt; DATE(2000, MONTH(Today()), DAY(Today())), 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_Balance__c</fullName>
        <label>Bad Debt Balance</label>
        <summarizedField>Charge_Group__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Charge_Group__c.Has_Bad_Debt_Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charge_Group__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTINumber1__c</fullName>
        <label>CTINumber1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CTINumber2__c</fullName>
        <label>CTINumber2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CTINumber3__c</fullName>
        <label>CTINumber3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delinquent_Balance__c</fullName>
        <label>Delinquent Balance</label>
        <summarizedField>Charge_Group__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Charge_Group__c.Has_Delinquent_Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charge_Group__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delinquent_Invoices__c</fullName>
        <description>Count of delinquent invoices</description>
        <label>Delinquent Invoices</label>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status_Index__c</field>
            <operation>equals</operation>
            <value>7</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Due_Balance__c</fullName>
        <label>Due Balance</label>
        <summarizedField>Charge_Group__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Charge_Group__c.Has_Due_Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charge_Group__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Guarantor_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Guarantor ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &quot; &quot; + MiddleName + &quot; &quot;  + LastName + &quot; &quot; + Suffix</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <description>Gender of Guarantor</description>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guarantor_Patient_Id__c</fullName>
        <formula>IF(
! ISBLANK(Profile_Pointer_ID__c) &amp;&amp; ISBLANK(Patient_Id__c), TEXT(Profile_Pointer_ID__c),
IF(
ISBLANK(Profile_Pointer_ID__c) &amp;&amp; ! ISBLANK(Patient_Id__c), TEXT(Patient_Id__c), TEXT(Profile_Pointer_ID__c) + &quot; / &quot; + TEXT(Patient_Id__c)
)
)</formula>
        <label>Guarantor/Patient Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master Guarantor for External Guarantor record</description>
        <inlineHelpText>Master Guarantor for External Guarantor record</inlineHelpText>
        <label>Guarantor</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guarantor</relationshipLabel>
        <relationshipName>Assigned_Guarantor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Type__c</fullName>
        <label>Home Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Offset_Date__c</fullName>
        <label>Invoice  Offset Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced_Balance__c</fullName>
        <label>Invoiced Balance</label>
        <summarizedField>Charge_Group__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Charge_Group__c.Has_Invoiced_Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charge_Group__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Number__c</fullName>
        <description>Patient medical Record number</description>
        <label>Medical Record Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Type__c</fullName>
        <label>Mobile Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Payment_Plan_Invoices__c</fullName>
        <description>Count of invoices not on payment plan</description>
        <label>Non-Payment Plan Invoices</label>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status_Index__c</field>
            <operation>greaterThan</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>external notes from Sirono</description>
        <label>Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>Origin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Type__c</fullName>
        <label>Other Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outstanding_Invoices__c</fullName>
        <description>Count of outstanding invoices</description>
        <label>Outstanding Invoices</label>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status_Index__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overdue_Balance__c</fullName>
        <label>Overdue Balance</label>
        <summarizedField>Charge_Group__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Charge_Group__c.Has_Overdue_Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charge_Group__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoices__c</fullName>
        <description>Count of Overdue invoices</description>
        <label>Overdue Invoices</label>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status_Index__c</field>
            <operation>equals</operation>
            <value>6</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Patient_Id__c</fullName>
        <externalId>true</externalId>
        <label>Patient ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Patient_Satisfaction__c</fullName>
        <label>Patient Satisfaction</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Balance__c</fullName>
        <label>Payment Plan Balance</label>
        <summarizedField>Charge_Group__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Charge_Group__c.Has_Payment_Plan_Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charge_Group__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Proclivity_Score__c</fullName>
        <label>Payment Proclivity Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Invoiced_Balance__c</fullName>
        <label>Pre-Invoiced Balance</label>
        <summarizedField>Charge_Group__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Charge_Group__c.Has_Pre_Invoiced_Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Charge_Group__c.Guarantor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <description>Preferred Contact method</description>
        <label>Preferred Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Pointer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Guarantor ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skip_Invoice_Stmt_Until__c</fullName>
        <label>Skip Invoice Stmt Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <description>Social Security number of guarantor</description>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Statement_Preference__c</fullName>
        <description>Preferred statement preference</description>
        <label>Statement Preference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_ID__c</fullName>
        <formula>IF(ISBLANK(Account.Site), &quot;DD&quot;, Account.Site) + TEXT(Profile_Pointer_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <description>Preinvoiced balance + Invoiced Balance</description>
        <formula>Invoiced_Balance__c + Pre_Invoiced_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verified_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box verifying Email</description>
        <label>Verified Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vital_Status__c</fullName>
        <label>Vital Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_External_Guarantors</fullName>
        <columns>Profile_Pointer_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External_Guarantor</value>
        </filters>
        <label>All External Guarantors</label>
    </listViews>
    <listViews>
        <fullName>All_Guarantors</fullName>
        <columns>Profile_Pointer_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE5</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Invoiced_Balance__c</columns>
        <columns>Pre_Invoiced_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Guarantor</value>
        </filters>
        <label>All Guarantors</label>
    </listViews>
    <listViews>
        <fullName>All_Patients</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.PHONE5</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Patient</value>
        </filters>
        <label>All Patients</label>
    </listViews>
    <listViews>
        <fullName>All_Staff</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff</value>
        </filters>
        <label>All Staff</label>
    </listViews>
    <listViews>
        <fullName>Contacts_w_TD_ID</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profile_Pointer_ID__c</field>
            <operation>contains</operation>
            <value>TD</value>
        </filters>
        <label>Contacts w/ TD ID</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Test_View2</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profile_Pointer_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Calculated Balance</label>
    </listViews>
    <recordTypes>
        <fullName>External_Guarantor</fullName>
        <active>true</active>
        <description>Created by Patient Accounting System</description>
        <label>External Guarantor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guarantor</fullName>
        <active>true</active>
        <description>Guarantor of the account or case</description>
        <label>Guarantor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient</fullName>
        <active>true</active>
        <description>Patient of the account or case</description>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <description>This is for the staff of the contact Object</description>
        <label>Staff</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>